# govuk-bank-holidays-rs

./: .editorconfig  Cargo.toml  Justfile  LICENSE.txt  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  pipeline.yml
examples/: bank-holidays.rs  download.rs
src/: bank_holidays.rs  calendar.rs  dates.rs  divisions.rs  errors.rs  lib.rs  work_days.rs
src/data_source/: bank-holidays.json  cached.rs  mod.rs  reqwest.rs
src/dates/: chrono.rs  mod.rs  time.rs
tests/: jiff.rs  temporal.rs
