[package]
name = "govuk-bank-holidays"
version = "0.2.1"
description = "Library for loading the official list of bank holidays in the United Kingdom from GOV.UK"
authors = ["ushkarev <ushkarev@users.noreply.github.com>"]
repository = "https://github.com/ministryofjustice/govuk-bank-holidays-rs"
categories = ["date-and-time", "localization"]
keywords = ["bank-holiday", "holiday", "united-kingdom"]
license = "MIT"
edition = "2021"  # 2024 requires 1.85+ and that's a bit too new
rust-version = "1.75"
exclude = [
    ".editorconfig",
    ".github/*",
    "Justfile",
]

[package.metadata.docs.rs]
targets = []

[features]
default = ["chrono"]
chrono = ["dep:chrono"]
time = ["dep:time"]

[dependencies]
chrono = { version = "^0.4", features = ["serde"], optional = true }
reqwest = { version = "^0.12", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^2.0"
time = { version = "^0.3", features = ["local-offset", "serde-human-readable"], optional = true }
tracing = "^0.1"

[dev-dependencies]
tokio = { version = "^1.40", features = ["macros", "rt-multi-thread", "test-util", "tracing"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json", "local-time"] }

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }
missing_docs = "warn"
unused_import_braces = "warn"
unused_must_use = "deny"

[lints.clippy]
await_holding_lock = "deny"
dbg_macro = "deny"
str_to_string = "warn"
